Began migration to GitHub based internationalisation

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -4,104 +4,9 @@
 		"message": "Save your groups of tabs so you can restore them later in a new window. You can edit saved tabs groups by adding, deleting or changing the url for each tab.",
 		"description": "Extension description"
 	},
-	"tabs_name_placeholder":
+	"tabber_i18n_url":
 	{
-		"message": "Name my tabs...",
-		"description": "The placeholder in tabber.html"
-	},
-	"edit_new_url_placeholder":
-	{
-		"message": "Type url...",
-		"description": "Placeholder in new url input"
-	},
-	"button_add":
-	{
-		"message": "Add",
-		"description": "Add button in edit page"
-	},
-	"button_add_group":
-	{
-		"message": "Add tabs",
-		"description": "Add group button in edit page"
-	},
-	"button_save":
-	{
-		"message": "Save",
-		"description": "Save button"
-	},
-	"button_cancel":
-	{
-		"message": "Cancel",
-		"description": "Cancel button"
-	},
-	"version":
-	{
-		"message": "Version",
-		"description": "version"
-	},
-	"updated_title":
-	{
-		"message": "has been updated",
-		"description": "message Tabber a été mis à jour"
-	},
-	"changelog":
-	{
-		"message": "• Fixed the bug with dark / light icon<br>• Improved sidebar after updating / installing Tabber<br>• Diverse improvements under the hood",
-		"description": "changelog"
-	},
-	"button_good_news":
-	{
-		"message": "Good news !",
-		"description": "bouton bonne nouvelle du changelog"
-	},
-	"button_version_notes":
-	{
-		"message": "Changelog",
-		"description": "Bouton notes de version"
-	},
-	"button_reset":
-	{
-		"message": "Reset Tabber",
-		"description": "Bouton réinitialisation"
-	},
-	"button_reset_continue":
-	{
-		"message": "All data will be lost. Continue ?",
-		"description": "Bouton réinitialisation confirmation"
-	},
-	"button_compact":
-	{
-		"message": "Enable compact mode",
-		"description": "bouton mode compact"
-	},
-	"button_compact_disable":
-	{
-		"message": "Disable compact mode",
-		"description": "bouton mode compact"
-	},
-	"button_replace_tabs":
-	{
-		"message": "Replace opened tabs",
-		"description": "bouton remplacer onglets"
-	},
-	"button_replace_tabs_disable":
-	{
-		"message": "Do not replace opened tabs",
-		"description": "bouton remplacer onglets"
-	},
-	"button_replace_with_tabs":
-	{
-		"message": "Replace with currently opened tabs",
-		"description": "bouton remplacer avec onglets actuels"
-	},
-	"button_replace_with_tabs_continue":
-	{
-		"message": "Can't undo this. Continue ?",
-		"description": "bouton remplacer avec onglets actuels"
-	},
-	"button_delete_continue":
-	{
-		"message": "Confirm deletion ?",
-		"description": "bouton confirmer suppression du groupe"
+		"message": "https://raw.githubusercontent.com/edrflt/tabber_i18n/master/en/",
+		"description": "url for translations"
 	}
 }
