--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -4,104 +4,9 @@
 		"message": "Sauvegardez un groupe d'onglets afin de le restaurer plus tard dans une nouvelle fenêtre. Permet de modifier les groupes d'onglets sauvegardés en ajoutant, supprimant ou éditant l'url de chaque onglet.",
 		"description": "Description de l'extension"
 	},
-	"tabs_name_placeholder":
+	"tabber_i18n_url":
 	{
-		"message": "Nommer mes onglets...",
-		"description": "Placeholder de tabber.html"
-	},
-	"edit_new_url_placeholder":
-	{
-		"message": "Tappez l'url...",
-		"description": "Placeholder in new url input"
-	},
-	"button_add":
-	{
-		"message": "Ajouter",
-		"description": "Bouton ajouter page édition"
-	},
-	"button_add_group":
-	{
-		"message": "Ajouter des onglets",
-		"description": "Bouton ajouter groupe page édition"
-	},
-	"button_save":
-	{
-		"message": "Sauvegarder",
-		"description": "Bouton sauvegarder"
-	},
-	"button_cancel":
-	{
-		"message": "Annuler",
-		"description": "Bouton annuler"
-	},
-	"version":
-	{
-		"message": "Version",
-		"description": "version"
-	},
-	"updated_title":
-	{
-		"message": "a été mis à jour",
-		"description": "message Tabber a été mis à jour"
-	},
-	"changelog":
-	{
-		"message": "• Correction du mode sombre et clair de l'icone<br>• Améliorarion de la barre latérale lors des premières installations / mises à jours<br>• Améliorations diverses sous le capot",
-		"description": "changelog"
-	},
-	"button_good_news":
-	{
-		"message": "Bonne nouvelle !",
-		"description": "bouton bonne nouvelle du changelog"
-	},
-	"button_version_notes":
-	{
-		"message": "Notes de version",
-		"description": "Bouton notes de version"
-	},
-	"button_reset":
-	{
-		"message": "Réinitialiser Tabber",
-		"description": "Bouton réinitialisation"
-	},
-	"button_reset_continue":
-	{
-		"message": "Toutes les données seront perdues. Continuer ?",
-		"description": "Bouton réinitialisation confirmation"
-	},
-	"button_compact":
-	{
-		"message": "Activer le mode compact",
-		"description": "bouton mode compact"
-	},
-	"button_compact_disable":
-	{
-		"message": "Désactiver le mode compact",
-		"description": "bouton mode compact"
-	},
-	"button_replace_tabs":
-	{
-		"message": "Remplacer les onglets courants",
-		"description": "bouton remplacer onglets"
-	},
-	"button_replace_tabs_disable":
-	{
-		"message": "Ne pas remplacer les onglets courants",
-		"description": "bouton remplacer onglets"
-	},
-	"button_replace_with_tabs":
-	{
-		"message": "Remplacer avec les onglets actuellement ouverts",
-		"description": "bouton remplacer avec onglets actuels"
-	},
-	"button_replace_with_tabs_continue":
-	{
-		"message": "Impossible d'annuler. Continuer ?",
-		"description": "bouton remplacer avec onglets actuels"
-	},
-	"button_delete_continue":
-	{
-		"message": "Confirmer la suppression ?",
-		"description": "bouton confirmer suppression du groupe"
+		"message": "https://raw.githubusercontent.com/edrflt/tabber_i18n/master/fr/",
+		"description": "url for translations"
 	}
 }
